--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "envix"
-version = "0.2.0"
+version = "0.2.1"
 description = "convinient secret manager."
 authors = ["yassun7010 <yassun7010@outlook.com>"]
 readme = "README.md"
@@ -16,6 +16,7 @@ rich = "^13.7.1"
 rich-argparse = "^1.4.0"
 pyyaml = "^6.0.1"
 google-cloud-secret-manager = "^2.19.0"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
