--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^8.1.1"
 pyright = "^1.1.357"
 ruff = ">=0.3.5,<0.6.0"
 taskipy = "^1.12.2"
+pytest-asyncio = "^0.24.0"
 
 [tool.taskipy.tasks]
 format = "ruff format ."
