--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -5,9 +5,9 @@ name: Test Suite
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["main"]
+    branches: ['main']
   workflow_dispatch:
 
 permissions:
@@ -20,34 +20,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ['3.11', '3.12', '3.13']
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+      - uses: astral-sh/setup-uv@v5
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-      - name: Poetry Version
-        run: |
-          poetry --version
-      - name: Poetry Install Dependencies
-        run: |
-          poetry install --no-interaction
-      - name: Format
-        run: |
-          poetry run task format --diff
-      - name: Lint
-        run: |
-          poetry run task lint --diff
-      - name: Type Check
-        run: |
-          poetry run task typecheck
-      - name: Schema Check
-        run: |
-          poetry run task schemacheck
-      - name: Test
-        run: |
-          poetry run task test
+          enable-cache: true
+          cache-dependency-glob: 'uv.lock'
+      - run: uv python install
+      - run: uv sync --all-extras --dev
+      - run: uv run task format --diff
+      - run: uv run task lint --diff
+      - run: uv run task typecheck
+      - run: uv run task schemacheck
+      - run: uv run task test
